Inicios de crear grupos de 3 4 5 para torneos multijugador

--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -17,7 +17,7 @@
                         <span class="day">18</span>
                     </div>
         
-                    Posted by <a href="">{{getUsername user_create}}</a> en <a href="#">Torneos</a>  |  <a href="#">3 comments</a>
+                    Creado por <a href="">{{getUsername user_create}}</a> en <a href="#">Torneos</a>  |  <a href="#">3 comments</a>
                     
                     <span class="badge badge-success">Empieza: {{date_start}}</span>
                     <span class="badge badge-important">Termina: {{date_finish}}</span>
@@ -34,14 +34,15 @@
     
     {{#if multiTorneo}}
     <div class="container">
+    <span class="badge badge-success startTorneo">Empezar el torneo</span>
         <div class="row">        
         
                 <p class="lead">Etapas del torneo </p>
                 <div id="tab" class="btn-group" data-toggle="buttons-radio">
-                  <a href="#prices2" class="btn btn-large btn-info active" data-toggle="tab">Preseleccion</a>
-                  <a href="#features2" class="btn btn-large btn-info" data-toggle="tab">1/4 Final</a>
-                  <a href="#requests2" class="btn btn-large btn-info" data-toggle="tab">SemiFinal</a>
-                  <a href="#contact2" class="btn btn-large btn-info"  data-toggle="tab">Final</a>
+                  <a href="#" class="btn btn-large btn-info active" data-toggle="tab">Preseleccion</a>
+                  <a href="#" class="btn btn-large btn-info" data-toggle="tab">1/4 Final</a>
+                  <a href="#" class="btn btn-large btn-info" data-toggle="tab">SemiFinal</a>
+                  <a href="#" class="btn btn-large btn-info"  data-toggle="tab">Final</a>
                 </div>
             
 
