--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -33,136 +33,68 @@
 
     
     {{#if multiTorneo}}
-    <div class="container">
-    <span class="badge badge-success startTorneo">Empezar el torneo</span>
-        <div class="row">        
-        
-                <p class="lead">Etapas del torneo </p>
-                <div id="tab" class="btn-group" data-toggle="buttons-radio">
-                  <a href="#" class="btn btn-large btn-info active" data-toggle="tab">Preseleccion</a>
-                  <a href="#" class="btn btn-large btn-info" data-toggle="tab">1/4 Final</a>
-                  <a href="#" class="btn btn-large btn-info" data-toggle="tab">SemiFinal</a>
-                  <a href="#" class="btn btn-large btn-info"  data-toggle="tab">Final</a>
-                </div>
-            
-
-            <div class="span5">
-                <table class="table table-striped table-condensed">
-                      <thead>
-                      <tr>
-                          <th>#</th>
-                          <th>Partida</th>
-                          <th>Ganador</th>                                        
-                      </tr>
-                  </thead>   
-                  <tbody>
-                    <tr>
-                        <td>Nº 1</td>
-                     
-                        <td>
-                            <div class="span5">
-                                <table class="table table-striped table-condensed">
-                                      <thead>
-                                      <tr>
-                                          <th>Username</th>
-                                          <th>Date registered</th>
-                                          <th>Role</th>
-                                          <th>Status</th>                                          
-                                      </tr>
-                                  </thead>   
-                                  <tbody>
-                                    <tr>
-                                        <td>Donna R. Folse</td>
-                                        <td>2012/05/06</td>
-                                        <td>Editor</td>
-                                        <td><span class="label label-success">Active</span>
-                                        </td>                                       
-                                    </tr>
-                                    
-                                    
-                                    <tr>
-                                        <td>Donna R. Folse</td>
-                                        <td>2012/05/06</td>
-                                        <td>Editor</td>
-                                        <td><span class="label label-success">Active</span>
-                                        </td>                                       
-                                    </tr>
-                                    
-                                    
-                                    <tr>
-                                        <td>Donna R. Folse</td>
-                                        <td>2012/05/06</td>
-                                        <td>Editor</td>
-                                        <td><span class="label label-success">Active</span>
-                                        </td>                                       
-                                    </tr>
-                                    
-                                   </tbody>
-                                 </table>
-                              </div>
-                        </td>
-        
-                       <td><span class="label label-success">Donna R. Folse</span>
-                                                       
-                    </tr>
-                    
-                                    <tr>
-                        <td>Nº 2</td>
-                     
-                        <td>
-                            <div class="span5">
-                                <table class="table table-striped table-condensed">
-                                      <thead>
-                                      <tr>
-                                          <th>Username</th>
-                                          <th>Date registered</th>
-                                          <th>Role</th>
-                                          <th>Status</th>                                          
-                                      </tr>
-                                  </thead>   
-                                  <tbody>
-                                    <tr>
-                                        <td>Donna R. Folse</td>
-                                        <td>2012/05/06</td>
-                                        <td>Editor</td>
-                                        <td><span class="label label-success">Active</span>
-                                        </td>                                       
-                                    </tr>
-                                    
-                                    
-                                    <tr>
-                                        <td>Donna R. Folse</td>
-                                        <td>2012/05/06</td>
-                                        <td>Editor</td>
-                                        <td><span class="label label-success">Active</span>
-                                        </td>                                       
-                                    </tr>
-                                    
-                                    
-                                    <tr>
-                                        <td>Donna R. Folse</td>
-                                        <td>2012/05/06</td>
-                                        <td>Editor</td>
-                                        <td><span class="label label-success">Active</span>
-                                        </td>                                       
-                                    </tr>
-                                    
-                                   </tbody>
-                                 </table>
-                              </div>
-                        </td>
-        
-                       <td><span class="label label-success">Donna R. Folse</span>
-                                                       
-                    </tr>
-                                 
-                  </tbody>
-                </table>
-                </div>
+<div class="container">
+<span class="badge badge-success startTorneo">Empezar el torneo</span>
+    <div class="row">        
+    
+        <p class="lead">Etapas del torneo </p>
+        <div id="tab" class="btn-group" data-toggle="buttons-radio">
+          <a href="#" class="btn btn-large btn-info active" data-toggle="tab">Preseleccion</a>
+          <a href="#" class="btn btn-large btn-info" data-toggle="tab">1/4 Final</a>
+          <a href="#" class="btn btn-large btn-info" data-toggle="tab">SemiFinal</a>
+          <a href="#" class="btn btn-large btn-info"  data-toggle="tab">Final</a>
         </div>
-    </div>
-    
-    
+        
+
+        <div class="span5">
+            <table class="table table-striped table-condensed">
+              <thead>
+                  <tr>
+                      <th>#</th>
+                      <th>Partida</th>
+                      <th>Ganador</th>                                        
+                  </tr>
+              </thead>   
+              
+              <tbody>
+                    {{#each partidasTorneo}}
+                        <tr>
+                             <td>{{no}}</td>
+                             <td>
+                                <div class="span5">
+                                      <table class="table table-striped table-condensed">
+                                            <thead>
+                                              <tr>
+                                                    <th>Username</th>
+                                                    <th>Rango</th>
+                                                    <th>Role</th>
+                                                    <th>Status</th>                                          
+                                              </tr>
+                                            </thead>   
+                                            <tbody>
+                                                  {{#each jugadores}}
+                                                    <tr>
+                                                      <td>{{getUsername this.user_id}}</td>
+                                                      <td>{{userRango this.user_id}}</td>
+                                                      <td>{{rol this.user_id ../this._id}}</td>
+                                                      <td><span class="{{estadoUser this.estado}}">{{this.estado}}</span>
+                                                      </td>                                       
+                                                    </tr>
+                                                  {{/each}}           
+                                            </tbody>
+                                      </table>
+                                 </div>
+                            </td>    
+                            
+                            <td><span class="label label-success">Donna R. Folse</span> </td>
+                                                       
+                        </tr>
+                    {{/each}}
+              </tbody>
+            </table>
+        </div>
+    </div>   
+</div>
     {{/if}}
 
 
