--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -86,7 +86,7 @@
                                  </div>
                             </td>    
                             
-                            <td><span class="label label-success">Donna R. Folse</span> </td>
+                            <td><span class="label label-success">No esta hecho, hay que hacerlo</span> </td>
                                                        
                         </tr>
                     {{/each}}
