--- a/PL-BlutBad/public/css/default.css
+++ b/PL-BlutBad/public/css/default.css
@@ -863,8 +863,18 @@ td, th {
 
 #tab {
 	margin: 3% 5%;
+	display: block;
 }
 
 .startTorneo {
 	margin-bottom: 2%;
+} 
+
+#winner {
+	margin-top: 90%;
+}
+
+#num {
+	font-weight: bold;
+	margin-top: 350%;
 }
