--- a/PL-BlutBad/client/templates/users-connected-t.html
+++ b/PL-BlutBad/client/templates/users-connected-t.html
@@ -1,18 +1,18 @@
 
-<template name="users_connected">
+<template name="usersConnected">
 	<div id="users-connected">
 		<input type="button" id="hide-users-connected" class="btn btn-primary" value="X">
-		<div id="connected" >
-			{{> connect}}
-			pepepepe
+		<div id="connected">
+			{{> connected}}
 		</div>
 		<input type="button" id="show-users-connected" class="btn btn-primary" value="Usuarios Conectados">
 	</div>
 </template>
 
-<template name="connect">
-	<!-- {{#each userConnected}} -->
-	<p>daniel</p>
-	hola hola
-	<!-- {{/each}} -->
+<template name="connected">
+	{{#each userConnected}}
+		<p>
+			username: <strong>{{username}}</strong>
+		</p>
+	{{/each}}
 </template>
