--- a/PL-BlutBad/client/templates/users-connected-t.html
+++ b/PL-BlutBad/client/templates/users-connected-t.html
@@ -2,7 +2,7 @@
 <template name="usersConnected">
 	<div id="users-connected">
 		<input type="button" id="hide-users-connected" class="btn btn-primary" value="X">
-		<div id="connected">
+		<div id="connected" style="display:none">
 			{{> connected}}
 		</div>
 		<input type="button" id="show-users-connected" class="btn btn-primary" value="Usuarios Conectados">
