busca si un usuario esta o no esta lo muestra por consola el resultado

--- a/PL-BlutBad/client/templates/user-menu-t.html
+++ b/PL-BlutBad/client/templates/user-menu-t.html
@@ -3,5 +3,12 @@
   <ul>
 	{{#each user_menu}}
 	<li class="{{current}}"><a href="">{{name}}</a></li> {{/each}}
+  	{{>ffind}}
   </ul>  
+
+
+</template>
+
+<template name="ffind">
+	<input type="text" id="tags">
 </template>
