--- a/PL-BlutBad/client/templates/user-menu-t.html
+++ b/PL-BlutBad/client/templates/user-menu-t.html
@@ -2,6 +2,7 @@
 <template name="user_menu">
   <ul>
 	{{#each user_menu}}
-	<li class="{{current}}"><a href="">{{name}}</a></li> {{/each}}
+		<li class="{{current}}" ><a href="">{{name}}</a></li>
+	{{/each}}
   </ul>  
 </template>
