--- a/PL-BlutBad/client/templates/friends-t.html
+++ b/PL-BlutBad/client/templates/friends-t.html
@@ -2,7 +2,17 @@
 	{{#if show}}
 		{{#if register}}
 			<div id="friends">
-				<p>hola</p>
+				<h1>Amigos</h1>
+				<div id="my-friends">
+					<h3>Mis amigos</h3>
+					<p>Faltan cosasssssss</p>
+				</div>
+				<div id="list-of-users">
+					<h3>Usuarios registrados</h3>
+					<div id="all-users">
+						{{> allUsers}}
+					</div>
+				</div>
 			</div>
 		{{else}}
 			<div>
@@ -10,4 +20,10 @@
 			</div>
 		{{/if}}
 	{{/if}}
+</template>
+
+<template name="allUsers">
+	{{#each userRegister}}
+		<p> {{username}} </p>
+	{{/each}}
 </template>
