--- a/PL-BlutBad/client/templates/friends-t.html
+++ b/PL-BlutBad/client/templates/friends-t.html
@@ -24,6 +24,6 @@
 
 <template name="allUsers">
 	{{#each userRegister}}
-		<p> {{username}} </p>
+		<p class="userRegister" id="user-{{username}}" > {{username}} </p>
 	{{/each}}
 </template>
