--- a/PL-BlutBad/client/templates/friends-t.html
+++ b/PL-BlutBad/client/templates/friends-t.html
@@ -33,6 +33,6 @@
 <template name="myFriends">
 	<p>my usarname: <strong>{{username}}</strong></p>
 	{{#each showFriends}}
-		<p>{{usarname}}</p>
+		<p>{{name}}</p>
 	{{/each}}
 </template>
