--- a/PL-BlutBad/public/css/friends.css
+++ b/PL-BlutBad/public/css/friends.css
@@ -20,6 +20,30 @@
 	background-color: white;
 }
 
+#my-friends-perfil {
+	background-color: #FAFAFA;
+	margin: 5px;
+	padding: 5px;
+}
+
+#my-friends-username {
+	text-align: left;
+}
+
+#my-friends-allfriends {
+	border: #6E6E6E 1px solid;
+	margin: 5px;
+	padding: 5px;
+	border-radius: 5px;
+	overflow-y: scroll;
+	height: 240px;
+}
+
+.list-of-friends {
+	background-color: white;
+	margin: 7px 0 7px 0;
+}
+
 #list-of-users {
 	text-align: center;
 	float: left;
@@ -34,7 +58,7 @@
 
 #all-users {
 	background-color: #FAFAFA;
-	border: black 1px solid;
+	border: #6E6E6E 1px solid;
 	border-radius: 3px;
 	overflow-y: scroll;
 	width: 90%;
@@ -44,6 +68,6 @@
 }
 
 .userRegister {
-	background-color: red;
-	margin: 5px 0 5px 0;
+	background-color: white;
+	margin: 7px 0 7px 0;
 }
