--- a/PL-BlutBad/client/templates/user-menu-t.html
+++ b/PL-BlutBad/client/templates/user-menu-t.html
@@ -1,13 +1,13 @@
 
 <template name="user_menu">
-  <ul>
+	<ul>
 	{{#each user_menu}}
 	<li class="{{current}}"><a href="">{{name}}</a></li> {{/each}}
-  <input type="text" id="tags">
-  </ul>  
+	<input type="text" id="tags">
+	</ul>  
 {{#if showprofilfriend}}
-      {{> friendprofil}}
-    {{/if}}
+			{{> friendprofil}}
+		{{/if}}
 </template>
 
 <template name="ffind">
@@ -15,36 +15,53 @@
 </template>
 
 <template name="friendprofil">
-  {{#with torneo}}
-    <div class="mask"> </div>
-        <div class="modal">
-        
-          <div class="modal-header">
-            <button type="button" class="close cancel">&times;</button>
-            <h3>Perfil</h3>
-          </div>   
-               
-         <div class="container">   
-          <label>
-          Nombre:
-           </label>
-           <label>
-                Email: 
-                </label>
-                <!--<input class="form-control" name="password" placeholder="New Password" type="password" />-->
-                Fecha de nacimiento: 
-                <label>
-                Género: 
-                     
-          </label>
-          <br/>
-        </div>
-          
-          <div class="modal-footer">
-            <a href="#" class="btn cancel">Cancelar</a>
-            <a href="#" class="btn btn-primary save_edit">Salvar</a>
-          </div>
-        </div>
-    </div>
-  {{/with}}
+	<div class="mask"> </div>
+		<div class="modal">
+			<div class="modal-header">
+				<button type="button" class="close cancel">&times;</button>
+				<h3>Perfil</h3>
+			</div>   
+		 	<div class="container">  
+				{{#with usuario}}
+					<label>
+						Nombre: {{getUsername _id}}
+					</label>
+					<label>
+						Fecha de nacimiento: {{getUserDateBirth _id}}
+					</label>
+					<label>
+						Género: {{getUserGender _id}}
+					</label>
+					<br/>
+				{{/with}}
+				<table>
+	  				<thead>
+       				<tr>
+      					<th>Juego</th>
+							<th>Victorias</th>
+							<th>Derrotas</th>
+							<th>Nº Partidas</th>
+							<th>Puntuación total</th>
+						</tr>
+					</thead>
+					<tbody>
+      				{{#each scores}} 
+							<tr>
+								<td><h4>{{game}}</h4></td>
+								<td><h4>{{win}}</h4></td>
+								<td><h4>{{lose}}</h4></td>
+								<td><h4>{{total}}</h4></td>
+								<td><h4>{{totalScore}}</h4></td> 			 
+							</tr>		
+						{{/each}}
+      			</tbody>
+				</table>   
+			</div>
+			<div class="modal-footer">
+				<a href="#" class="btn cancel">Cancelar</a>
+				<a href="#" class="btn btn-primary save_edit">Añadir a amigos</a>
+			</div>
+		</div>
+	</div>	
 </template>
+
