--- a/PL-BlutBad/public/css/friends.css
+++ b/PL-BlutBad/public/css/friends.css
@@ -40,7 +40,7 @@
 }
 
 .list-of-friends {
-	background-color: white;
+	background-color: #D8D8D8;
 	margin: 7px 0 7px 0;
 }
 
@@ -68,6 +68,6 @@
 }
 
 .userRegister {
-	background-color: white;
+	background-color: #D8D8D8;
 	margin: 7px 0 7px 0;
 }
