--- a/PL-BlutBad/public/css/friends.css
+++ b/PL-BlutBad/public/css/friends.css
@@ -71,3 +71,15 @@
 	background-color: #D8D8D8;
 	margin: 7px 0 7px 0;
 }
+
+#notRegisterDialog {
+	width: 98%;
+	height: 50px;
+	background-color: white;
+	border: #6E6E6E 1px solid;
+	border-radius: 5px;
+	text-align: center;
+	margin: 10px;
+	padding: 25px 0 0 0;
+	font: 150% sans-serif;
+}
