--- a/PL-BlutBad/client/templates/friends-t.html
+++ b/PL-BlutBad/client/templates/friends-t.html
@@ -34,6 +34,12 @@
 						</p>
 					</div>
 
+					<div id="ifSelectMe" title="Amigos" style="display:none">
+	  					<p>
+	  						No te puedes añadir a ti mismo como amigo.
+	  					</p>
+					</div>
+
 				</div>
 
 			</div>
