--- a/PL-BlutBad/public/css/friends.css
+++ b/PL-BlutBad/public/css/friends.css
@@ -42,6 +42,7 @@
 .list-of-friends {
 	background-color: #D8D8D8;
 	margin: 7px 0 7px 0;
+	cursor:pointer; cursor: hand;
 }
 
 #list-of-users {
@@ -70,6 +71,7 @@
 .userRegister {
 	background-color: #D8D8D8;
 	margin: 7px 0 7px 0;
+	cursor:pointer; cursor: hand;
 }
 
 #notRegisterDialog {
