Mostrar a los 3 mejores de cada juego

--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -12,6 +12,10 @@
           <span class="badge badge-success">Empieza: {{date_start}}</span>
           <span class="badge badge-important">Termina: {{date_finish}}</span>
           <span class="{{participoClass}} apuntarme">Participantes: {{numParticip}}</span>
+          
+          
+          <span class="badge badge-important finalizarTorneo">Finalizar el torneo!</span>
+          
         </div>
         
         <div class="post-description">
