--- a/PL-BlutBad/client/templates/ranking-t.html
+++ b/PL-BlutBad/client/templates/ranking-t.html
@@ -1,6 +1,6 @@
 <template name="ranking">
 	{{#if show}}
-		<h1>Ranking</h1> 
+    <h1>Ranking</h1> 
 		<div class="container_ranking">
 			<div class="game_filter">
 				<h3>Ranking del juego</h3>
@@ -9,7 +9,7 @@
 						<li class = "sortBy"><a href="#" class="{{_id}}">{{name}}</a></li> 
 					{{/each}}
 				</ul> 	
-				<input type="button" id="mostrar_ranking" value="Mostrar todos"> 
+				<input type="button" id="mostrar_ranking" value="Mostrar a los mejores!"> 
 			</div> 
 			
 			<div id = "ranking_container">
@@ -19,12 +19,48 @@
 				    <button class="btn">Boton Funcional 2</button>
 				</div>
 
+
+    {{#if show3BestRanking}}
+         {{#each juegos}}
+             {{#if anyGamer _id}}
+                <div class="well">
+                <h3>{{name}}</h3>
+                            <table class="table">
+                              <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>USER</th>
+                                    <th>MAX SCORE</th> 
+                                    <th>Total SCORE</th> 
+                                    <th>RANGO</th> 
+                                </tr>
+                              </thead>
+                              <tbody>
+                              {{#each bestPlayers3 _id}}
+                                    <tr>
+                                        <td>{{No}}</td>
+                                        <td>{{user}}</td>
+                                        <td>{{maxScore}}</td> 
+                                        <td>{{totalScore}}</td> 
+                                        <td>{{rango}}</td> 
+                                    </tr>
+                                {{/each}}
+                              </tbody>
+                            </table>
+                        </div>
+                    </div>  
+                </div>
+             {{/if}}
+        {{/each}}
+
+    {{else}}
 				<div class="well">
+				<h3>{{gameName}}</h3>
+				
 				    <table class="table">
 				      <thead>
 				        <tr>
 			          		<th>#</th>
-							<th>GAME</th>
 							<th>USER</th>
 							<th>MAX SCORE</th> 
 							<th>Total SCORE</th> 
@@ -35,7 +71,6 @@
 				      {{#each scores}} 
 				        <tr>
 				        	<td>{{No}}</td>
-							<td>{{game}}</td>
 							<td>{{user}}</td>
 							<td>{{maxScore}}</td> 
 							<td>{{totalScore}}</td> 
@@ -58,4 +93,5 @@
 			</div>	
 		</div>
 	{{/if}}
+{{/if}}
 </template> 
