Ranking marcar al 1 2 3 y otros

--- a/PL-BlutBad/client/templates/ranking-t.html
+++ b/PL-BlutBad/client/templates/ranking-t.html
@@ -39,7 +39,7 @@
                               {{#each bestPlayers3 _id}}
                                     <tr>
                                         <td>{{No}}</td>
-                                        <td>{{user}}</td>
+                                        <td><span class="{{clacc}}">{{user}}</span>
                                         <td>{{maxScore}}</td> 
                                         <td>{{totalScore}}</td> 
                                         <td>{{rango}}</td> 
@@ -71,7 +71,7 @@
 				      {{#each scores}} 
 				        <tr>
 				        	<td>{{No}}</td>
-							<td>{{user}}</td>
+				        	<td><span class="{{clacc}}">{{user}}</span>
 							<td>{{maxScore}}</td> 
 							<td>{{totalScore}}</td> 
 							<td>{{rango}}</td> 
