--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -86,9 +86,12 @@
 
     {{#if soloTorneo}}
       <div class="container">
+     
         <div class="row">
           <div class="span5">
-            <table class="table table-striped table-condensed">
+           <div class="well">
+            <table class="table">                         
+                <h3>Ranking del torneo!</h3>
               <thead>
                 <tr>
                   <th>#</th>
@@ -101,8 +104,8 @@
                 {{#each soloRanking}}
                   <tr>
                     <td>{{no}}</td>
-                    <td>{{getUsername user_id}}</td>
-                    <td>Editor</td>
+                    <td><span class="{{clacc}}">{{getUsername user_id}}</span>
+                    <td>--</td>
                     <td>{{maxScore}}</td>                                       
                   </tr>
                 {{/each}}
@@ -110,7 +113,8 @@
             </table>
           </div>
         </div>
-      </div>                       
+      </div>    
+      </div>                    
     {{/if}}
 
   </div>
