--- a/PL-BlutBad/client/templates/user-menu-t.html
+++ b/PL-BlutBad/client/templates/user-menu-t.html
@@ -1,55 +1,7 @@
-
 <template name="user_menu">
 	<ul>
-	{{#each user_menu}}
-
-	<li class="{{current}}"><a href="">{{name}}</a></li> {{/each}}
-	<input type="text" id="tags">
+		{{#each user_menu}}
+			<li class="{{current}}"><a href="">{{name}}</a></li> 
+		{{/each}}
 	</ul> 
-	{{#if showprofilfriend}}
-		{{> friendprofil}}
-	{{/if}}
-</template>
-
-<template name="ffind">
-	<input type="text" id="tags">
-</template>
-
-<template name="friendprofil">
-	<div class="mask"> </div>
-		<div class="modal">
-			<div class="modal-header">
-				<button type="button" class="close cancel">&times;</button>
-				<h3>Perfil</h3>
-			</div>   
-		 	<div class="container">  
-				{{#with usuario}}
-					<label>
-						Nombre: {{getUsername _id}}
-					</label>
-				
-					<label>
-						Fecha de nacimiento: {{getUserDateBirth _id}}
-					</label>
-
-					<label>
-						Género: {{getUserGender _id}}
-					</label>
-				{{/with}}
-					<br/>
-				
-				 
-				{{> stadGraphic}}
-			</div>
-			<div class="modal-footer">
-				<a href="#" class="btn cancel">Cancelar</a>
-				<a href="#" class="btn btn-primary save_edit">Añadir a amigos</a>
-			</div>
-		</div>
-	</div>	
-</template>
-
-
-<template name="stadGraphic">
-    <div id="graficoEstadisticas" style="width: 400px; height: 400px "></div>
 </template>
