--- a/PL-BlutBad/client/templates/hall-clarcassone-t.html
+++ b/PL-BlutBad/client/templates/hall-clarcassone-t.html
@@ -34,7 +34,44 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
       </div>
     
     <div class="row">
-		  <div class="span5">
+      <div class="span5 well">
+        <h3>Mis partidas actuales</h3>
+        {{#each CurrentParty}}
+          <table class="table table-striped table-condensed">
+            <thead>
+              <tr>
+                <th>Username</th>
+                <th>Rango</th>
+                <!-- Obtener los puntos hasta el momento                
+                <th>Puntos</th>
+                -->
+                <th>Status</th>                                          
+              </tr>
+            </thead>   
+            <tbody>
+              {{#each jugadores}}
+                <tr>
+                  <td>{{getUsername this.user_id}}</td>
+                  <td>{{userRango this.user_id}}</td>
+                  <!-- Obtener los puntos hasta el momento
+                  <td>{{rol this.user_id ../this._id}}</td>
+                   -->
+                  <td><span class="label label-important">Jugando</span>
+                  </td>                                       
+                </tr>
+              {{/each}}           
+            </tbody>
+          </table>
+          {{#if currentUser}}
+            <div class="btn-toolbar">
+              <button class="continue">Continuar</button> 
+            </div>
+          {{/if}}
+        {{/each}}
+      </div>      
+
+		  <div class="span5 well">
+        <h3>Partidas creadas</h3>
 		    {{#each partidasVolatiles}}
           <table class="table table-striped table-condensed">
             <thead>
