Añadidos nuevos ficheros de ia e iu en Plataforma blutbad; Añadido favicon de la página

--- a/PL-BlutBad/client/templates/juegos-t.html
+++ b/PL-BlutBad/client/templates/juegos-t.html
@@ -25,10 +25,10 @@
 
 <template name="gamecontainer"> 
   <div id="gamecontainer">    
-  	  {{> misTorneos}}   
-	  {{>idnClarca}}
-	  {{>idnAlien}}
-	  {{>idnFroot}}
+  	{{>misTorneos}} 
+	{{>idnClarca}}
+	{{>idnAlien}}
+	{{>idnFroot}}
   </div>
 </template>
 
@@ -121,8 +121,8 @@
  
 
 <template name="misTorneos">
-    <div class="span12" id = "mistor">
-    <p class="lead">Mis torneos:</p>
+    <div class="span5 well mistor">
+    	<h3>Mis torneos</h3>
 		{{#if tengoTorneos}}
             <div id="tab" class="btn-group" data-toggle="buttons-radio">
               {{#each torneos}}
@@ -130,7 +130,7 @@
               {{/each}}
             </div>
         {{else}}
-	     	<p>No participa en ningún torneo, apúntese a uno, lo pasará en grande!</p>
+	     	<h5>No participa en ningún torneo, apúntese a uno, lo pasará en grande!</h5>
 	    {{/if}}
     </div>     
 </template>
