Solucionado problema de varios divs nombrados con el mismo id

--- a/PL-BlutBad/client/templates/juegos-t.html
+++ b/PL-BlutBad/client/templates/juegos-t.html
@@ -121,7 +121,7 @@
  
 
 <template name="misTorneos">
-    <div class="span5 well mistor">
+    <div class="span5 well mistor" id="prueba">
     	<h3>Mis torneos</h3>
 		{{#if tengoTorneos}}
             <div id="tab" class="btn-group" data-toggle="buttons-radio">
