--- a/PL-BlutBad/client/templates/buscador-t.html
+++ b/PL-BlutBad/client/templates/buscador-t.html
@@ -8,7 +8,7 @@
 
 				<div id="buscador">
 
-					<p>Introduce el nombre de un usuario para buscarlo</p>
+					<p>Introduce el nombre de un usuario para buscarlo.</p>
 					<input type="text" id="tags">
 
 				</div>
@@ -47,7 +47,7 @@
 				<button type="button" class="close cancel">&times;</button>
 				<h3>Perfil</h3>
 			</div>   
-		 	<div class="container">  
+		 	<div class="container" id="container-buscar">  
 		 		<div id="datos-usuario-buscado">
 					{{#with usuario}}
 						<label>
